# conda-docker

./: .authors.yml  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  LICENSE  Makefile  README.md  README.org  environment-dev.yaml  example.sh  pyproject.toml  rever.xsh  setup.cfg  setup.py  shell.nix
.azure-pipelines/: azure-pipelines-linux.yml
.ci_support/: linux_python3.7.____cpython.yaml
.github/workflows/: pre-commit.yml  tests.yaml
.scripts/: build_steps.sh  run_docker_build.sh
conda_docker/: __main__.py  cli.py  conda.py  conda_models.py  download.py  logging.py  utils.py
conda_docker/docker/: base.py  client.py  tar.py
conda_docker/docker_envs/: logging.py
conda_docker/registry/: client.py
docker_envs/: conda.py  docker.py
docker_envs/docker/: base.py  client.py  tar.py
news/: cross-device-link.md  feature-expose-docker-image-api.md  initial.md  json-decode-error.md  layering.md
recipe/: meta.yaml
src/docker_envs/: cli.py  conda.py  utils.py
src/docker_envs/docker/: base.py  tar.py
src/docker_envs/registry/: client.py
tests/: conftest.py  test_conda.py
