[metadata]
name = conda-docker
version = attr: conda_docker.__version__
description = Create minimal docker images from conda environments
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = conda-forge
author_email = conda-forge@googlegroups.com
url = https://github.com/conda-incubator/conda-docker
keywords = conda
license = BSD-3-Clause
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3 :: Only
project_urls =
  Bug Reports = https://github.com/conda-incubator/conda-docker
  Documentation = https://github.com/conda-incubator/conda-docker
  Source = https://github.com/conda-incubator/conda-docker

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  conda-docker=conda_docker.cli:main

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 89
exclude =
  .git,
  __pycache__,
